--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
     "axios": "^0.26.1",
+    "bootstrap": "^5.1.3",
     "react": "^18.0.0",
+    "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
