--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/react-fontawesome": "^0.1.18",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "gh-pages": "^3.2.3",
     "react": "^18.0.0",
     "react-bootstrap": "^2.3.1",
     "react-dom": "^18.0.0",
